Fix gap css

--- a/src/components/ui/card/Card.module.scss
+++ b/src/components/ui/card/Card.module.scss
@@ -3,7 +3,7 @@
   background-color: #fff;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  row-gap: 2rem;
   min-height: 400px;
   padding: 1rem;
 }
